# H-infinity

./: .gitignore  CLAUDE.md  Data_Logger.py  GPS-RTK_ROS2_pub_node.py  README.md  ToDo.md  env_sanitizer.sh  estop_cli.py  limo_scenario_motion.py  project_spec.md  run_scenarios_from_files.py  start_ROS.sh
DOC/: CLAUDE.md  project_spec.md
scalecar-vfg-h-infinite/: .gitignore  LICENSE  README.md  pyproject.toml
scalecar-vfg-h-infinite/notebooks/: 01_quickstart.ipynb  02_pid_vs_lpvhinf.ipynb  03_custom_path.ipynb  04_tuning.ipynb
scalecar-vfg-h-infinite/report/: Makefile  main.tex
scalecar-vfg-h-infinite/report/sections/: controller.tex  problem.tex  results.tex  vfg.tex
scalecar-vfg-h-infinite/ros2_bridge/: README.md  package.xml  setup.cfg  setup.py
scalecar-vfg-h-infinite/ros2_bridge/config/: params.yaml
scalecar-vfg-h-infinite/ros2_bridge/limo_path_follower/: __init__.py  orchestrator_node.py  path_follower_node.py
scalecar-vfg-h-infinite/tests/: test_controllers.py  test_paths.py  test_simulation.py
scalecar-vfg-h-infinite/vfg_pathfollowing/: __init__.py  api.py
scalecar-vfg-h-infinite/vfg_pathfollowing/controllers/: lpv_hinf.py
scalecar-vfg-h-infinite/vfg_pathfollowing/models/: __init__.py  kinematic.py
scalecar-vfg-h-infinite/vfg_pathfollowing/paths/: __init__.py  bezier.py  sinusoidal.py  slalom.py  step_curvature.py
scalecar-vfg-h-infinite/vfg_pathfollowing/simulation/: __init__.py  engine.py  metrics.py  noise_gen.py  result.py
scenarios/: angular_rate_scenarios.ini  const_acc_scenarios.ini  const_vel_scenarios.ini  static_scenarios.ini
(+9 files in other folders)
