[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfg-pathfollowing"
version = "0.1.0"
description = "VFG-based path following for LIMO mobile robot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Suwon Lee", email = "suwon@kookmin.ac.kr"},
]
keywords = ["path-following", "vector-field-guidance", "autonomous-vehicles", "LPV", "H-infinity"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
notebook = ["jupyter", "ipywidgets"]
ros2 = []  # ROS2 dependencies managed by colcon
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["vfg_pathfollowing*"]

[tool.setuptools.package-data]
"vfg_pathfollowing.data.controllers" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
